feat(core): restarting Subflow
Fixes https://github.com/kestra-io/kestra-ee/issues/1399